Upgrade to Java21 using openRewrite